bugfix with extra white space on page's right side

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -15,6 +15,14 @@ $accent-color-2: #44ffd1;
 $accent-color-3: #6153cc;
 
 /* General Settings */
+html,
+body {
+  width: 100%;
+  margin: 0px;
+  padding: 0px;
+  overflow-x: hidden;
+}
+
 body {
   font-family: $bodyFont;
   color: $text-color;
